# snakes

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.yaml  go.mod  go.sum
.github/workflows/: build.yml  discord.yml
cmd/snakes/: main.go
config/: config.yaml
docs/: colors.md  configuration.md  debugging.md  reference.md
examples/: README.md
examples/c/: .gitignore  README.md  config.yaml  main.c  xmake.lua
examples/csharp/: .gitignore  MyCSharpSnake.sln  Program.cs  README.md  config.yaml
examples/csharp/Properties/: launchSettings.json
examples/javascript/: README.md  config.yaml  my-js-snake.js
examples/python/: README.md  config.yaml  my-python-snake.py
examples/rust/: Cargo.toml  README.md  config.yaml
examples/rust/src/: macros.rs  main.rs
get-started/: README.md
get-started/examples/c/: README.md
get-started/examples/c/snakes/: config.yaml
get-started/examples/c/src/: main.c
get-started/examples/java/: README.md
get-started/examples/java/snakes/: config.yaml
get-started/examples/java/src/Example/: Example.java
get-started/examples/python/: README.md
get-started/examples/python/snakes/: config.yaml
get-started/examples/python/src/: main.py
get-started/examples/rust/: .gitignore  Cargo.toml  README.md
get-started/examples/rust/snakes/: config.yaml
get-started/examples/rust/src/: macros.rs  main.rs
pkg/: ebiengine.go  engine.go
pkg/engine/: ebiengine.go  engine.go  engineBase.go  headless.go
pkg/pathfinding/: pathfinding.go  pathfinding_test.go
pkg/snakes/: baseAgent.go  builtinAgent.go  config.go  direction.go  externalAgent.go  gridpoint.go  keyboardAgent.go  randomAgent.go  render.go  snake.go  snakes.go  state.go
pkg/snakes/resources/: embed.go
src/: main.rs
src/collisions/: systems.rs
src/config/: cli.rs  mod.rs
src/death/: config.rs  data.rs  systems.rs
src/food/: config.rs  data.rs  mod.rs  systems.rs
src/game/: mod.rs
src/game/collisions/: data.rs  systems.rs
src/game/death/: config.rs  data.rs  systems.rs
src/game/food/: config.rs  data.rs  systems.rs
src/game/grid/: data.rs  mod.rs  systems.rs
src/game/input/: data.rs  systems.rs
src/game/movement/: data.rs  systems.rs
src/game/players/: config.rs  data.rs  systems.rs
src/game/replays/: config.rs  data.rs  systems.rs
src/game/snakes/: data.rs  mod.rs  systems.rs
src/game/turns/: config.rs  data.rs  systems.rs
src/grid/: data.rs  systems.rs
src/gui/: mod.rs
src/gui/widgets/: mod.rs
src/headful/: mod.rs
src/input/: data.rs  systems.rs
src/movement/: data.rs  systems.rs
src/players/: config.rs  data.rs  systems.rs
src/snakes/: data.rs  systems.rs
src/turns/: config.rs  data.rs  mod.rs  systems.rs
