[package]
name = "snakes"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
bevy = { version = "0.9.1", features = ["wayland", "serialize"] }
bevy-inspector-egui = "0.14.0"
bevy_easings = { version = "0.9.0", features = ["ui"] }
bevy_turborand = "0.4.2"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
copypasta = "0.8.1"
crossbeam-channel = "0.5.6"
iyes_loopless = "0.9.1"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.1"
wait-timeout = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
